changed the messages in the resource bundle

--- a/src/main/resources/translation_fr_CA.properties
+++ b/src/main/resources/translation_fr_CA.properties
@@ -1,1 +1,1 @@
-welcome = Bonjour! Bienvenue sur la page de planification de l'hôtel Langdon. Veuillez lire attentivement et choisir judicieusement.
+ welcome = ?Welcome to the Landon Hotel.?
