--- a/src/main/resources/translation_en_US.properties
+++ b/src/main/resources/translation_en_US.properties
@@ -1,1 +1,1 @@
-welcome = Hello! Welcome to the Langdon Hotel's scheduling page. Please read carefully, and choose wisely.
+welcome = ?Bienvenue à l'hôtel Landon?
